--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,18 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--<activity-->
-            <!--android:name=".MainActivity"-->
-            <!--android:label="@string/app_name"-->
-            <!--android:theme="@style/AppTheme.NoActionBar">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
         <activity
-            android:name=".DateActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -32,10 +22,11 @@
             android:name=".ArchivoActivity"
             android:label="@string/title_activity_archivo"
             android:theme="@style/AppTheme.NoActionBar" />
-        <!--<activity-->
-            <!--android:name=".DateActivity"-->
-            <!--android:label="@string/title_activity_date"-->
-            <!--android:theme="@style/AppTheme.NoActionBar"></activity>-->
+        <activity
+            android:name=".DateActivity"
+            android:label="@string/title_activity_date"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".InmuebleActivity"></activity>
     </application>
 
 </manifest>
