--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".ArchivoActivity"
             android:label="@string/title_activity_archivo"
@@ -20,6 +19,10 @@
         <activity
             android:name=".DateActivity"
             android:label="@string/title_activity_date"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UsuarioActivity"
+            android:label="Usuarios"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".InmuebleActivity" />
         <activity android:name=".AcercaDeActivity" />
@@ -34,6 +37,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
