--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity
             android:name=".ArchivoActivity"
             android:label="@string/title_activity_archivo"
@@ -20,16 +21,17 @@
             android:name=".DateActivity"
             android:label="@string/title_activity_date"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".UsuarioActivity"
-            android:label="Usuarios"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".InmuebleActivity" />
         <activity android:name=".AcercaDeActivity" />
         <activity
             android:name=".ContratoActivity"
             android:label="@string/title_activity_contrato"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UsuarioActivity"
+            android:label="Usuarios"
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +39,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
