--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,32 +9,29 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Controlador.Activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ArchivoActivity"
+            android:name=".Controlador.Activity.ArchivoActivity"
             android:label="@string/title_activity_archivo" />
         <activity
-            android:name=".DateActivity"
-            android:label="@string/title_activity_date" />
-        <activity
-            android:name=".InmuebleActivity"
+            android:name=".Controlador.Activity.InmuebleActivity"
             android:label="@string/title_activity_inmueble" />
         <activity
-            android:name=".AcercaDeActivity"
+            android:name=".Controlador.Activity.AcercaDeActivity"
             android:label="@string/title_activity_acerca_de" />
         <activity
-            android:name=".ContratoActivity"
+            android:name=".Controlador.Activity.ContratoActivity"
             android:label="@string/title_activity_contrato" />
         <activity
-            android:name=".HabitacionActivity"
+            android:name=".Controlador.Activity.HabitacionActivity"
             android:label="@string/title_activity_habitacion" />
         <activity
-            android:name=".UsuarioActivity"
+            android:name=".Controlador.Activity.UsuarioActivity"
             android:label="@string/title_activity_usuario" />
 
-        <activity android:name=".SplashActivity">
+        <activity android:name=".Controlador.Activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
